@startuml

title __SHAPES-P1's Class Diagram__\n

  namespace es.ull.shapes {
    class es.ull.shapes.Circle {
    }
  }
  

  namespace es.ull.shapes {
    class es.ull.shapes.Main {
    }
  }
  

  namespace es.ull.shapes {
    class es.ull.shapes.MyButton {
    }
  }
  

  namespace es.ull.shapes {
    class es.ull.shapes.MyDialog {
    }
  }
  

  namespace es.ull.shapes {
    class es.ull.shapes.MyFrame {
    }
  }
  

  namespace es.ull.shapes {
    class es.ull.shapes.MyLabel {
    }
  }
  

  namespace es.ull.shapes {
    class es.ull.shapes.MyPanel {
    }
  }
  

  namespace es.ull.shapes {
    class es.ull.shapes.MyTextField {
    }
  }
  

  namespace es.ull.shapes {
    abstract class es.ull.shapes.ShapeCircular {
    }
  }
  

  namespace es.ull.shapes {
    abstract class es.ull.shapes.ShapePolygonal {
    }
  }
  

  namespace es.ull.shapes {
    class es.ull.shapes.Square {
    }
  }
  

  namespace es.ull.shapes {
    class es.ull.shapes.Triangle {
    }
  }
  

  es.ull.shapes.Circle -up-|> es.ull.shapes.ShapeCircular
  es.ull.shapes.MyButton -up-|> javax.swing.JButton
  es.ull.shapes.MyDialog -up-|> javax.swing.JDialog
  es.ull.shapes.MyFrame -up-|> javax.swing.JFrame
  es.ull.shapes.MyFrame o-- es.ull.shapes.MyPanel : panel
  es.ull.shapes.MyLabel -up-|> javax.swing.JLabel
  es.ull.shapes.MyPanel -up-|> javax.swing.JPanel
  es.ull.shapes.MyTextField -up-|> javax.swing.JTextField
  es.ull.shapes.Square -up-|> es.ull.shapes.ShapePolygonal
  es.ull.shapes.Triangle -up-|> es.ull.shapes.ShapePolygonal


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
